RESOLVED FIXED269340
[iOS] Address fullscreen warning UI feedback
https://bugs.webkit.org/show_bug.cgi?id=269340
Summary [iOS] Address fullscreen warning UI feedback
Jer Noble
Reported 2024-02-13 20:42:43 PST
[iOS] Address fullscreen warning UI feedback
Attachments
Jer Noble
Comment 1 2024-02-13 20:42:52 PST
Jer Noble
Comment 2 2024-02-13 20:58:58 PST
EWS
Comment 3 2024-02-14 17:42:34 PST
Committed 274684@main (ad9eeb0d8d0e): <https://commits.webkit.org/274684@main> Reviewed commits have been landed. Closing PR #24394 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.