[iOS] Address fullscreen warning UI feedback https://bugs.webkit.org/show_bug.cgi?id=269340 rdar://117099085

Reviewed by Aditya Keerthi.

Address feedback re: the fullscreen warning panel is visible upon entering fullscreen
by making two changes to the warning panel:

1. Move the panel to the top third of the screen, to avoid both media controls in the
   center of the screen, as well as controls along the bottom.

2. Allow the user to dismiss the warning panel by tapping on it; but ensure the panel
   is visible for a minimum amount of time, even if tapped.

* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(-[WKFullScreenViewController invalidate]):
(-[WKFullScreenViewController showBanner]):
(-[WKFullScreenViewController hideBanner]):
(-[WKFullScreenViewController _minimumHideDelayReached]):
(-[WKFullScreenViewController _bannerDismissalRecognized:]):
(-[WKFullScreenViewController loadView]):

Canonical link: https://commits.webkit.org/274684@main